feito os cards, a ultima dash e atualizando as classes

--- a/Desbravadores-site/public/classes/companheiro.html
+++ b/Desbravadores-site/public/classes/companheiro.html
@@ -23,6 +23,11 @@
                 <a href="../conta.html">Conta</a>
             </div>
         </li>
+        <li>
+            <div class="box3">
+                <a href="../dashboard.html">Sair</a>
+            </div>
+       </li>
     </ul>
 <div class="conteiner">
     
@@ -30,27 +35,27 @@
         I. GERAIS
     </h2>
     <p>
-1. Ter, no mínimo, 11 anos de idade.<br>
+1. Ter, no mínimo, 11 anos de idade.<input type="checkbox" id="1"><br>
 
-2. Ser membro ativo do Clube de Desbravadores.<br>
+2. Ser membro ativo do Clube de Desbravadores.<input type="checkbox" id="2"><br>
 
-3. Ilustrar de forma criativa o significado do Voto do Desbravador.<br>
+3. Ilustrar de forma criativa o significado do Voto do Desbravador.<input type="checkbox" id="3"><br>
 
-4. Ler o livro do Curso de Leitura do ano e escrever um parágrafo sobre o que mais lhe chamou atenção ou considerou importante.<br>
+4. Ler o livro do Curso de Leitura do ano e escrever um parágrafo sobre o que mais lhe chamou atenção ou considerou importante.<input type="checkbox" id="4"><br>
 
 
-5. Ler o livro Um simples lanche.<br>
+5. Ler o livro Um simples lanche.<input type="checkbox" id="5"><br>
 
-6. Participar ativamente da Classe Bíblica do seu Clube.<br>
+6. Participar ativamente da Classe Bíblica do seu Clube.<input type="checkbox" id="6"><br>
 </p>
 
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
-1. Memorizar e demonstrar o seu conhecimento:<br>
+1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox" id="7"><br>
 a) 10 Mandamentos: A Lei de Deus dada a Moisés.<br>
 b) 27 livros do Novo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
 
-2. Ler e explicar os versos abaixo:<br>
+2. Ler e explicar os versos abaixo:<input type="checkbox" id="8"><br>
 a) Isaías 41:9-10<br>
 b) Hebreus 13:5<br>
 c) Provérbios 22:6<br>
@@ -58,7 +63,7 @@ d) I João 1:9<br>
 e) Salmo 8<br>
 
 
-3. Leitura bíblica:<br>
+3. Leitura bíblica:<input type="checkbox" id="9"><br>
 Lv 11, Nm 9:15-23, 11, 12, 13, 14:1-38, 16, 17, 20:1-13; 22-29,  <br>
 21:4-9, 22, 23; 24:1-10, Dt 1:1-17; 4:1-8, 32:1-43, 33, 34, Js 1, 2 <br>
 3, 4, 5:10; 6, 7, 9, 24:1-15; 29, Jz 6, 7, 13:1-18; 14, 15, 16, Rt 1, 2,  <br>
@@ -66,86 +71,86 @@ Lv 11, Nm 9:15-23, 11, 12, 13, 14:1-38, 16, 17, 20:1-13; 22-29,  <br>
 18:1-19, 20, 21:1-7; 22, 24, 25, 26, 31, 2 Sm 1, 5, 6, 7, 9, 11; 12:1-25, 15, 18 <br>
 </p>
 <p>
-4. Em consulta com o seu conselheiro, escolher um dos seguintes temas:<br>
+4. Em consulta com o seu conselheiro, escolher um dos seguintes temas:<input type="checkbox" id="10"><br>
 a) Uma parábola de Jesus<br>
 b) Um milagre de Jesus<br>
 c) O Sermão da Montanha<br>
 d) Um sermão sobre a Segunda Vinda de Cristo<br>
 </p>
+<p>
+Escolher um item abaixo para demonstrar seu conhecimento sobre o tema escolhido:<input type="checkbox" id="11"><br>
+a) Troca de ideias com o seu conselheiro<br>
+b) Atividade que integre todo o grupo<br>
+c) Redação
+</p>
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
-1. Dedicar duas horas ajudando alguém em sua comunidade, através de duas das seguintes atividades:<br>
-a) Visitar alguém que precisa de amizade e orar com essa pessoa.<br>
-b) Oferecer alimento a alguém carente.<br>
-c) Participar de um projeto ecológico ou educativo.<br>
+1. Planejar e dedicar pelo menos duas horas servindo sua comunidade e demonstrando companheirismo a alguém, de maneira prática.<input type="checkbox" id="12"><br>
 
-2. Escrever uma redação explicando como ser um bom cidadão no lar e na escola.<br>
+2. Participar de um projeto que beneficiará sua comunidade ou igreja.<input type="checkbox" id="13"><br>
 </p>
 <h2>IV. DESENVOLVENDO AMIZADE</h2>
 <p>
-1. Mencionar dez qualidades de um bom amigo e apresentar quatro situações diárias onde você praticou a Regra Áurea de Mateus 7:12.<br>
-
-2. Saber cantar o Hino Nacional de seu país e conhecer sua história. Saber o nome do autor da letra e da música do hino.<br>
+1. Conversar com seu Conselheiro ou Unidade sobre como respeitar pessoas de diferentes culturas, raça e sexo.<input type="checkbox" id="14"><br>
 
 <h2>V. SAÚDE E APTIDÃO FÍSICA</h2>
 
-1. Completar uma das seguintes especialidades:<br>
-a) Natação principiante I<br>
-b) Cultura física<br>
-c) Nós e amarras<br>
-d) Segurança básica na água<br>
+1. Memorizar e explicar I Coríntios 9:24-27.<input type="checkbox" id="15"><br>
 
-2. Utilizando a experiência de Daniel:<br>
-a) Explicar os princípios de temperança que ele defendeu ou participar em uma apresentação ou encenação sobre Daniel 1.<br>
-b) Memorizar e explicar Daniel 1:8.<br>
-c) Escrever seu compromisso pessoal de seguir um estilo de vida saudável.<br>
+2. Conversar com seu líder sobre a aptidão física e os exercícios físicos regulares que se relacionam com uma vida saudável.<input type="checkbox" id="16"><br>
 
-3. Aprender os princípios de uma dieta saudável e ajudar a preparar um quadro com os grupos básicos de alimentos.<br>
+3. Aprender sobre os prejuízos que o cigarro causa à saúde e escrever seu compromisso de não fazer uso do fumo.<input type="checkbox" id="17"><br>
+
+4. Completar uma das seguintes especialidades:<input type="checkbox" id="18"><br>
+a) Natação principiante II<br>
+b) Acampamento II<br>
 </p>
 <h2>VI. ORGANIZAÇÃO E LIDERANÇA</h2>
 <p>
-1. Através da observação, acompanhar todo o processo de planejamento até a execução de uma caminhada de 5 km.<br>
+
+1. Dirigir ou colaborar em uma meditação criativa para sua Unidade ou Clube.<input type="checkbox" id="19"><br>
+
+2. Ajudar no planejamento de uma excursão ou acampamento com sua Unidade ou Clube, envolvendo pelo menos um pernoite.<input type="checkbox" id="20"><br>
+
 </p>
 <h2>VII. ESTUDO DA NATUREZA</h2> 
 <p>
-1. Completar uma das seguintes especialidades:<br>
-a) Felinos<br>
-b) Cães<br>
-c) Mamíferos<br>
-d) Sementes<br>
-e) Aves de estimação<br>
+1. Participar de jogos na natureza ou caminhada ecológica, pelo período de uma hora.<input type="checkbox" id="21"><br>
 
-2. Aprender e demonstrar uma maneira para purificar a água e escrever um parágrafo destacando o significado de Jesus como a água da vida.<br>
+2. Completar uma das seguintes especialidades:<input type="checkbox" id="22"><br>
+a) Anfíbios<br>
+b) Aves<br>
+c) Aves domésticas<br>
+d) Pecuária<br>
+e) Répteis<br>
+f) Moluscos<br>
+g) Árvores<br>
+h) Arbustos<br>
 
-3. Aprender e montar uma barraca em local apropriado.<br>
+3. Recapitular o estudo da Criação e fazer um diário por sete dias registrando suas observações do que foi criado em cada dia correspondente.<input type="checkbox" id="23"><br>
 </p>
 <h2>VIII. ARTE DE ACAMPAR</h2>
 <p>
-1. Demonstrar como cuidar corretamente de uma corda. Fazer e explicar o uso prático dos seguintes nós:<br>
-a) Simples<br>
-b) Cego<br>
-c) Direito<br>
-d) Cirurgião<br>
-e) Laís de guia<br>
-f) Laís de guia duplo<br>
+
+1. Descobrir os pontos cardeais sem a ajuda de uma bússola e desenhar a Rosa dos Ventos.<input type="checkbox" id="24"><br>
+
+2. Participar de um acampamento de final de semana e fazer um relatório destacando o que mais lhe impressionou positivamente.<input type="checkbox" id="25"><br>
+
+3. Aprender ou recapitular os seguintes nós:<input type="checkbox" id="26"><br>
+a) Oito<br>
+b) Volta do salteador<br>
+c) Duplo<br>
+d) Caminhoneiro<br>
+e) Direito<br>
+f) Volta do Fiel<br>
 g) Escota<br>
-h) Catau<br>
-i) Pescador<br>
-j) Fateixa<br>
-k) Volta do fiel<br>
-l) Nó de gancho<br>
-m) Volta da ribeira<br>
-n) Ordinário<br>
+h) Laís de Guia<br>
+i) Simples<br>
 
-2. Completar a especialidade de Acampamento I.<br>
-
-3. Apresentar dez regras para uma caminhada e explicar o que fazer quando estiver perdido.<br>
-
-4. Aprender os sinais para seguir uma pista. Preparar e seguir uma pista de no mínimo 10 sinais, que também possa ser seguida por outros.<br>
 </p>
 <h2>IX. ESTILO DE VIDA</h2>
 <p>
-1. Completar uma especialidade na área de Artes e habilidades manuais.<br>
+1. Completar uma especialidade não realizada anteriormente na seção de Artes e habilidades manuais.<input type="checkbox" id="27"><br>
 </p>
 </div>
 </body>
