--- a/Desbravadores-site/public/classes/pesquisador.html
+++ b/Desbravadores-site/public/classes/pesquisador.html
@@ -23,6 +23,11 @@
                 <a href="../conta.html">Conta</a>
             </div>
         </li>
+        <li>
+            <div class="box3">
+                <a href="../dashboard.html">Sair</a>
+            </div>
+       </li>
     </ul>
 <div class="conteiner">
     
@@ -30,122 +35,93 @@
     I. GERAIS
 </h2>
 <p>
-1. Ter, no mínimo, 12 anos de idade.<input type="checkbox"><br>
-2. Ser membro ativo do Clube de Desbravadores.<input type="checkbox"><br>
-3. Demonstrar sua compreensão do significado da Lei do Desbravador através de uma das seguintes atividades:<input type="checkbox"><br>
-a) Representação<input type="checkbox"><br>
-b) Debate<input type="checkbox"><br>
-c) Redação<input type="checkbox"><br>
-4. Ler o livro do Curso de Leitura do ano e escrever dois parágrafos sobre o que mais lhe chamou atenção ou considerou importante.<input type="checkbox"><br>
-5. Ler o livro Além da magia.<input type="checkbox"><br>
-6. Participar ativamente da Classe Bíblica do seu Clube.<input type="checkbox"><br>
+1. Ter, no mínimo, 12 anos de idade.<input type="checkbox" id="1"><br>
+2. Ser membro ativo do Clube de Desbravadores.<input type="checkbox"id="2"><br>
+3. Demonstrar sua compreensão do significado da Lei do Desbravador através de uma das seguintes atividades:<input type="checkbox"id="3"><br>
+a) Representação
+b) Debate
+c) Redação
+4. Ler o livro do Curso de Leitura do ano e escrever dois parágrafos sobre o que mais lhe chamou atenção ou considerou importante.<input type="checkbox"id="4"><br>
+5. Ler o livro Além da magia.<input type="checkbox"id="5"><br>
+6. Participar ativamente da Classe Bíblica do seu Clube.<input type="checkbox"id="6"><br>
 </p>
 
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
-1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox"><br>
-a) Levítico 11: regras dos alimentos considerados comestíveis e não comestíveis.<input type="checkbox"><br>
-2. Ler e explicar os versos abaixo:<input type="checkbox"><br>
-a) Eclesiastes 12:13-14<input type="checkbox"><br>
-b) Romanos 6:23<input type="checkbox"><br>
-c) Apocalipse 1:3<input type="checkbox"><br>
-d) Isaías 43:1-2<input type="checkbox"><br>
-e) Salmo 51:10<input type="checkbox"><br>
-f) Salmo 16<input type="checkbox"><br>
-3. Leitura bíblica:<input type="checkbox"><br>
-1 Rs 1:28-53, 3, 4:20-34, 5, 6, 8:12-60, 10, 11:6-43, 12, 16:29-33, 17:1-7, 17:8-24, 18, 19, 21, 2 Rs 2, 4:1-7, 4:8-41, 5, 6:1-23, 6:24-33, 7, 20, 22, 23:36-37, 24, 25:1-7, 2 Cr 24:1-14, 36, Ed 1, 3, 6:14-15, Ne 1, 2, 4, 8, Ester 1, 2, 3, 4, 5, 6, 7, 8, Jó 1, 2, 42, Sl 1, 15, 19, 23, 24, 27, 37, 39, 42, 46, 67, 90, 91, 92, 97, 98, 100, 117, 119:1-176, 121, 125, 150, Pv 1, 3, 4, 10, 15, 20, 25, Ec 1<input type="checkbox"><br>
-4. Conversar com seu líder e escolher uma das seguintes histórias:<input type="checkbox"><br>
-a) João 3 – Nicodemos<input type="checkbox"><br>
-b) João 4 – A mulher samaritana<input type="checkbox"><br>
-c) Lucas 10 – O bom samaritano<input type="checkbox"><br>
-d) Lucas 15 – O filho pródigo<input type="checkbox"><br>
-e) Lucas 19 – Zaqueu<input type="checkbox"><br>
-Através da história escolhida, demonstrar sua compreensão em como Jesus salva as pessoas, usando um dos métodos abaixo:<input type="checkbox"><br>
-a) Conversar em grupo com a participação de seu líder<input type="checkbox"><br>
-b) Apresentar uma mensagem em uma reunião do Clube<input type="checkbox"><br>
-c) Fazer uma série de cartazes ou uma maquete<input type="checkbox"><br>
-d) Escrever uma poesia ou hino<input type="checkbox"><br>
+1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox"id="7"><br>
+a) Levítico 11: regras dos alimentos considerados comestíveis e não comestíveis.<br>
+2. Ler e explicar os versos abaixo:<input type="checkbox"id="8"><br>
+a) Eclesiastes 12:13-14<br>
+b) Romanos 6:23<br>
+c) Apocalipse 1:3<br>
+d) Isaías 43:1-2<br>
+e) Salmo 51:10<br>
+f) Salmo 16<br>
+3. Leitura bíblica:<input type="checkbox"id="9"><br>
+1 Rs 1:28-53, 3, 4:20-34, 5, 6, 8:12-60, 10, 11:6-43, 12, 16:29-33, 17:1-7, 17:8-24, 18, 19, 21, 2 Rs 2, 4:1-7, 4:8-41, 5, 6:1-23, 6:24-33, 7, 20, 22, 23:36-37, 24, 25:1-7, 2 Cr 24:1-14, 36, <br>
+Ed 1, 3, 6:14-15, Ne 1, 2, 4, 8, Ester 1, 2, 3, 4, 5, 6, 7, 8, Jó 1, 2, 42, Sl 1, 15, 19, 23, 24, 27, 37, 39, 42, 46, 67, 90, 91, 92, 97, 98, 100, 117, 119:1-176, 121, 125, 150, Pv 1, 3, 4, <br>
+10, 15, 20, 25, Ec 1<br>
+4. Conversar com seu líder e escolher uma das seguintes histórias:<input type="checkbox" id="10"><br>
+a) João 3 – Nicodemos<br>
+b) João 4 – A mulher samaritana<br>
+c) Lucas 10 – O bom samaritano<br>
+d) Lucas 15 – O filho pródigo<br>
+e) Lucas 19 – Zaqueu<br>
+Através da história escolhida, demonstrar sua compreensão em como Jesus salva as pessoas, usando um dos métodos abaixo:<input type="checkbox"id="11"><br>
+a) Conversar em grupo com a participação de seu líder<br>
+b) Apresentar uma mensagem em uma reunião do Clube<br>
+c) Fazer uma série de cartazes ou uma maquete<br>
+d) Escrever uma poesia ou hino<br>
 </p>
 
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
-1. Conhecer os projetos comunitários desenvolvidos em sua cidade e participar de, pelo menos, um deles com sua Unidade ou Clube.<input type="checkbox"><br>
-2. Participar em três atividades missionárias da igreja.<input type="checkbox"><br>
+1. Conhecer os projetos comunitários desenvolvidos em sua cidade e participar de, pelo menos, um deles com sua Unidade ou Clube.<input type="checkbox"id="12"><br>
+2. Participar em três atividades missionárias da igreja.<input type="checkbox"id="13"><br>
 </p>
 
 <h2>IV. DESENVOLVENDO AMIZADE</h2>
 <p>
-1. Participar de um debate ou representação sobre a pressão de grupo e identificar a influência que isso exerce sobre suas decisões.<input type="checkbox"><br>
-2. Visitar um órgão público de sua cidade ou bairro e descobrir de que maneiras o Clube pode ser útil à sua comunidade.<input type="checkbox"><br>
+1. Participar de um debate ou representação sobre a pressão de grupo e identificar a influência que isso exerce sobre suas decisões.<input type="checkbox"id="14"><br>
+2. Visitar um órgão público de sua cidade ou bairro e descobrir de que maneiras o Clube pode ser útil à sua comunidade.<input type="checkbox"id="15"><br>
 </p>
 
 <h2>V. SAÚDE E APTIDÃO FÍSICA</h2>
 <p>
-1. Escolher uma das atividades abaixo e escrever um texto pessoal para um estilo de vida livre do álcool:<input type="checkbox"><br>
-a) Participar de uma discussão em classe sobre os efeitos do álcool no organismo.<input type="checkbox"><br>
-b) Assistir a um vídeo sobre o efeito do álcool ou outras drogas no corpo humano e conversar sobre o assunto.<input type="checkbox"><br>
+1. Escolher uma das atividades abaixo e escrever um texto pessoal para um estilo de vida livre do álcool:<input type="checkbox"id="16"><br>
+a) Participar de uma discussão em classe sobre os efeitos do álcool no organismo.<br>
+b) Assistir a um vídeo sobre o efeito do álcool ou outras drogas no corpo humano e conversar sobre o assunto.<br>
 </p>
 
 <h2>VI. ORGANIZAÇÃO E LIDERANÇA</h2>
 <p>
-1. Dirigir uma cerimônia de abertura da reunião semanal do seu Clube ou um programa da Escola Sabatina.<input type="checkbox"><br>
-2. Ajudar a organizar a Classe Bíblica do seu Clube.<input type="checkbox"><br>
+1. Dirigir uma cerimônia de abertura da reunião semanal do seu Clube ou um programa da Escola Sabatina.<input type="checkbox"id="17"><br>
+2. Ajudar a organizar a Classe Bíblica do seu Clube.<input type="checkbox"id="18"><br>
 </p>
 
 <h2>VII. ESTUDO DA NATUREZA</h2>
 <p>
-1. Identificar a estrela Alfa da constelação de Centauro e a constelação de Órion. Conhecer o significado espiritual de Órion, como descrito no livro Primeiros Escritos, pág. 41.<input type="checkbox"><br>
-2. Completar uma das especialidades abaixo:<input type="checkbox"><br>
-a) Astronomia<input type="checkbox"><br>
-b) Cactos<input type="checkbox"><br>
-c) Climatologia<input type="checkbox"><br>
-d) Flores<input type="checkbox"><br>
-e) Rastreio de animais<input type="checkbox"><br>
+1. Identificar a estrela Alfa da constelação de Centauro e a constelação de Órion. Conhecer o significado espiritual de Órion, como descrito no livro Primeiros Escritos, pág. 41.<input type="checkbox"id="19"><br>
+2. Completar uma das especialidades abaixo:<input type="checkbox"id="20"><br>
+a) Astronomia<br>
+b) Cactos<br>
+c) Climatologia<br>
+d) Flores<br>
+e) Rastreio de animais<br>
 </p>
 
 <h2>VIII. ARTE DE ACAMPAR</h2>
 <p>
-1. Apresentar seis segredos para um bom acampamento. Participar de um acampamento de final de semana, planejando e cozinhando duas refeições.<input type="checkbox"><br>
-2. Completar uma das seguintes especialidades:<input type="checkbox"><br>
-a) Acampamento III<input type="checkbox"><br>
-b) Primeiros socorros – básico<input type="checkbox"><br>
-3. Aprender a usar uma bússola ou GPS (urbano ou de campo) e demonstrar sua habilidade encontrando endereços em uma zona urbana.<input type="checkbox"><br>
+1. Apresentar seis segredos para um bom acampamento. Participar de um acampamento de final de semana, planejando e cozinhando duas refeições.<input type="checkbox"id="21"><br>
+2. Completar uma das seguintes especialidades:<input type="checkbox"id="22"><br>
+a) Acampamento III<br>
+b) Primeiros socorros – básico<br>
+3. Aprender a usar uma bússola ou GPS (urbano ou de campo) e demonstrar sua habilidade encontrando endereços em uma zona urbana.<input type="checkbox"id="23"><br>
 </p>
 
 <h2>IX. ESTILO DE VIDA</h2>
 <p>
-1. Completar uma especialidade, não realizada anteriormente, em Artes e habilidades manuais.<input type="checkbox"><br>
-</p>
-
-<h2>CLASSE AVANÇADA – PESQUISADOR DE CAMPO E BOSQUE</h2>
-<p>
-1. Conhecer e saber usar de forma adequada a bandeira dos Desbravadores e o bandeirim de Unidade.<input type="checkbox"><br>
-2. Ler a história de J. N. Andrews ou de um pioneiro do seu país e discutir a importância do trabalho missionário e por que Cristo ordenou a grande comissão (Mateus 28:18-20).<input type="checkbox"><br>
-3. Convidar uma pessoa para assistir um dos seguintes programas:<input type="checkbox"><br>
-a) Clube de Desbravadores<input type="checkbox"><br>
-b) Classe Bíblica<input type="checkbox"><br>
-c) Pequeno Grupo<input type="checkbox"><br>
-4. Fazer uma das seguintes especialidades:<input type="checkbox"><br>
-a) Asseio e cortesia cristã<input type="checkbox"><br>
-b) Vida familiar<input type="checkbox"><br>
-5. Participar de uma caminhada de 10 km e fazer uma lista dos equipamentos necessários, incluindo roupa e calçado que devem ser usados.<input type="checkbox"><br>
-6. Participar na organização de um dos eventos especiais do Clube:<input type="checkbox"><br>
-a) Investidura<input type="checkbox"><br>
-b) Admissão em lenço<input type="checkbox"><br>
-c) Dia Mundial do Desbravador<input type="checkbox"><br>
-7. Identificar seis pegadas de animais ou aves. Fazer um modelo em gesso, massa de modelar ou biscuit de três dessas pegadas.<input type="checkbox"><br>
-8. Aprender a fazer as quatro amarras básicas e construir um móvel de acampamento.<input type="checkbox"><br>
-9. Planejar um cardápio vegetariano para sua Unidade para um acampamento de três dias e apresentá-lo ao seu instrutor.<input type="checkbox"><br>
-10. Enviar e receber uma mensagem através de uma das formas de comunicação abaixo:<input type="checkbox"><br>
-a) Alfabeto com semáforos<input type="checkbox"><br>
-b) Código Morse com lanterna<input type="checkbox"><br>
-c) Alfabeto Libras (língua de sinais)<input type="checkbox"><br>
-d) Alfabeto Braille<input type="checkbox"><br>
-11. Completar uma especialidade, não realizada anteriormente, em uma das áreas abaixo:<input type="checkbox"><br>
-a) Habilidades domésticas<input type="checkbox"><br>
-b) Ciência e saúde<input type="checkbox"><br>
-c) Atividades missionárias<input type="checkbox"><br>
-d) Atividades agrícolas<input type="checkbox"><br>
+1. Completar uma especialidade, não realizada anteriormente, em Artes e habilidades manuais.<input type="checkbox"id="24"><br>
 </p>
 
 </div>
