--- a/Desbravadores-site/public/historia.html
+++ b/Desbravadores-site/public/historia.html
@@ -59,44 +59,53 @@
                 </div>
             </div>
             <div class="linha-tempo">
+                <hr>
                 <div class="anos">
                     <div class="conteudo">
                         <div class="box">
-                            <h4>1990</h4>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, veniam! At aliquam perferendis facilis</p>
+                            <p>1921</p>
+                            <p class="conteudo-ano">Criado o Voto e a Lei dos Missionários Voluntários (MV), por Harriet Holt e Arthur Spalding.</p>
                         </div>
                         <div class="box2">
-                            <p>1990</p>
+                            <p>1922</p>
+                            <p class="conteudo-ano">Criação das Classes Progressivas (Amigo, Companheiro, Camarada e Guia Camarada).</p>
                         </div>
                         <div class="box3">
-                            <p>1990</p>
+                            <p>1930</p>
+                            <p class="conteudo-ano">Primeiro Clube informal de Desbravadores formado por Dr. Theron Johnston (meninos) e Sras. Ethel Johnston e Ivone Martin (meninas), na Califórnia.</p>
                         </div>
                         <div class="box4">
-                            <p>1990</p>
+                            <p>1946</p>
+                            <p class="conteudo-ano">Desenhado o emblema do Clube de Desbravadores por John Hancock.</p>
                         </div>
                         <div class="box5">
-                            <p>1990</p>
+                            <p>1950</p>
+                            <p class="conteudo-ano">A Associação Geral autoriza o funcionamento do Clube de Desbravadores a nível mundial.</p>
                         </div>
                         <div class="box6">
-                            <p>1990</p>
+                            <p>1983</p>
+                            <p class="conteudo-ano">Primeiro Campori da Divisão Sul-Americana, Foz do Iguaçu – Brasil.</p>
                         </div>
                         <div class="box7">
-                            <p>1990</p>
+                            <p>1994</p>
+                            <p class="conteudo-ano">Campori Internacional "Dare to Care", Colorado – EUA.</p>
                         </div>
                         <div class="box8">
-                            <p>1990</p>
+                            <p>1998</p>
+                            <p class="conteudo-ano">Primeiro Campori de Líderes da Divisão Sul-Americana, Pucón – Chile.</p>
                         </div>
                         <div class="box9">
-                            <p>1990</p>
+                            <p>2004</p>
+                            <p class="conteudo-ano">Campori Internacional "Faith on Fire", Oshkosh – EUA, com 30 mil participantes de 100 países.</p>
                         </div>
                         <div class="box10">
-                            <p>1990</p>
-                        </div>
-                        <div class="box11">
-                            <p>1990</p>
-                        </div>
+                            <p>2009</p>
+                            <p class="conteudo-ano">Campori Internacional "Courage to Stand", Oshkosh – EUA.</p>
+                        </div> 
                     </div>
                 </div>
+                <div class="gradiente"></div>
+                <div class="gradiente2"></div>
             </div>
             <div class="footer">
                 <div class="conteiner">
