--- a/Desbravadores-site/public/quiz.html
+++ b/Desbravadores-site/public/quiz.html
@@ -25,6 +25,11 @@
                         <a href="conta.html">Conta</a>
                     </div>
                 </li>
+                <li>
+                    <div class="box3">
+                        <a href="index.html">Sair</a>
+                    </div>
+                </li>
             </ul>
 <body onload="onloadEsconder(), validarSessao()">
     <div class="conteiner-quiz">
@@ -656,7 +661,7 @@
             let textoParaMensagemFinal = null
             let classComCoresParaMensagemFinal = null
         let questoes = resultados.length
-        const porcentagemFinalDeAcertos = questoes - pontuacao
+        const porcentagemFinalDeAcertos = pontuacao
 
         // for(let i = 1;i <= 10;i++){
         //     const percorrer = `pergunta${i}`
