--- a/Desbravadores-site/public/classes/amigo.html
+++ b/Desbravadores-site/public/classes/amigo.html
@@ -23,6 +23,11 @@
                 <a href="../conta.html">Conta</a>
             </div>
         </li>
+        <li>
+            <div class="box3">
+                <a href="../dashboard.html">Sair</a>
+            </div>
+       </li>
     </ul>
 <div class="conteiner">
     
@@ -30,35 +35,35 @@
         I. GERAIS
     </h2>
     <p>
-1. Ter, no mínimo, 10 anos de idade.<br>
+1. Ter, no mínimo, 10 anos de idade. <input type="checkbox" id="1"><br>
 
-2. Ser membro ativo do Clube de Desbravadores.<br>
+2. Ser membro ativo do Clube de Desbravadores.<input type="checkbox" id="2"><br>
 
-3. Memorizar e explicar o Voto e a Lei do Desbravador.<br>
+3. Memorizar e explicar o Voto e a Lei do Desbravador.<input type="checkbox" id="3"><br>
 
-4. Ler o livro do Curso de Leitura do ano.<br>
+4. Ler o livro do Curso de Leitura do ano.<input type="checkbox" id="4"><br>
 
 
-5. Ler o livro Vaso de Barro.<br>
+5. Ler o livro Vaso de Barro.<input type="checkbox" id="5"><br>
 
-6. Participar ativamente da Classe Bíblica do seu Clube.<br>
+6. Participar ativamente da Classe Bíblica do seu Clube.<input type="checkbox" id="6"><br>
 </p>
 
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
-1. Memorizar e demonstrar o seu conhecimento:<br>
+1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox" id="7"><br>
 a) Criação: O que Deus criou em cada dia da Criação.<br>
 b) 10 Pragas: Quais as pragas que caíram sobre o Egito.<br>
 c) 12 Tribos: O nome de cada uma das 12 tribos de Israel.<br>
 d) 39 livros do Antigo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
 
-2. Ler e explicar os versos abaixo:<br>
+2. Ler e explicar os versos abaixo:<input type="checkbox" id="8"><br>
 a) João 3:16<br>
 b) Efésios 6:1-3<br>
 c) II Timóteo 3:16<br>
 d) Salmo 1<br>
 
-3. Leitura bíblica:<br>
+3. Leitura bíblica:<input type="checkbox" id="9"><br>
 Gn 1, Gn 2, Gn 3, Gn 4:1-16, Gn 6:11-22, Gn 7, Gn 8, Gn 9:1-19, Gn 11:1-9, Gn 12:1-10, Gn 13, Gn 14:18-24, <br>
 Gn 15, Gn 17:1-8; 15-22, Gn 18:1-15, Gn 18:16-33, Gn 19:1-29, Gn 21:1-21, Gn 22:1-19, Gn 23, Gn 24:1-46, 48, <br>
 Gn 24:52-67, Gn 27, Gn 28, Gn 29, Gn 30:25-31; 31:2-3, 17-18, Gn 32, Gn 33, Gn 37, Gn 39, Gn 40, Gn 41, Gn 42, <br>
@@ -67,54 +72,54 @@ Gn 43, Gn 44, Gn 45, Gn 47, Gn 50, Êx 1, Êx 2, Êx 3, Êx 4:1-17; 27-31, Êx 5
 </p>
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
-1. Dedicar duas horas ajudando alguém em sua comunidade, através de duas das seguintes atividades:<br>
+1. Dedicar duas horas ajudando alguém em sua comunidade, através de duas das seguintes atividades:<input type="checkbox" id="10"><br>
 a) Visitar alguém que precisa de amizade e orar com essa pessoa.<br>
 b) Oferecer alimento a alguém carente.<br>
 c) Participar de um projeto ecológico ou educativo.<br>
 
-2. Escrever uma redação explicando como ser um bom cidadão no lar e na escola.<br>
+2. Escrever uma redação explicando como ser um bom cidadão no lar e na escola.<input type="checkbox" id="11"><br>
 </p>
 <h2>IV. DESENVOLVENDO AMIZADE</h2>
 <p>
-1. Mencionar dez qualidades de um bom amigo e apresentar quatro situações diárias onde você praticou a Regra Áurea de Mateus 7:12.<br>
+1. Mencionar dez qualidades de um bom amigo e apresentar quatro situações diárias onde você praticou a Regra Áurea de Mateus 7:12.<input type="checkbox" id="12"><br>
 
-2. Saber cantar o Hino Nacional de seu país e conhecer sua história. Saber o nome do autor da letra e da música do hino.<br>
+2. Saber cantar o Hino Nacional de seu país e conhecer sua história. Saber o nome do autor da letra e da música do hino.<input type="checkbox" id="13"><br>
 
 <h2>V. SAÚDE E APTIDÃO FÍSICA</h2>
 
-1. Completar uma das seguintes especialidades:<br>
+1. Completar uma das seguintes especialidades:<input type="checkbox" id="14"><br>
 a) Natação principiante I<br>
 b) Cultura física<br>
 c) Nós e amarras<br>
 d) Segurança básica na água<br>
 
-2. Utilizando a experiência de Daniel:<br>
+2. Utilizando a experiência de Daniel:<input type="checkbox" id="15"><br>
 a) Explicar os princípios de temperança que ele defendeu ou participar em uma apresentação ou encenação sobre Daniel 1.<br>
 b) Memorizar e explicar Daniel 1:8.<br>
 c) Escrever seu compromisso pessoal de seguir um estilo de vida saudável.<br>
 
-3. Aprender os princípios de uma dieta saudável e ajudar a preparar um quadro com os grupos básicos de alimentos.<br>
+3. Aprender os princípios de uma dieta saudável e ajudar a preparar um quadro com os grupos básicos de alimentos.<input type="checkbox" id="16"><br>
 </p>
 <h2>VI. ORGANIZAÇÃO E LIDERANÇA</h2>
 <p>
-1. Através da observação, acompanhar todo o processo de planejamento até a execução de uma caminhada de 5 km.<br>
+1. Através da observação, acompanhar todo o processo de planejamento até a execução de uma caminhada de 5 km.<input type="checkbox" id="17"><br>
 </p>
 <h2>VII. ESTUDO DA NATUREZA</h2> 
 <p>
-1. Completar uma das seguintes especialidades:<br>
+1. Completar uma das seguintes especialidades:<input type="checkbox" id="18"><br>
 a) Felinos<br>
 b) Cães<br>
 c) Mamíferos<br>
 d) Sementes<br>
 e) Aves de estimação<br>
 
-2. Aprender e demonstrar uma maneira para purificar a água e escrever um parágrafo destacando o significado de Jesus como a água da vida.<br>
+2. Aprender e demonstrar uma maneira para purificar a água e escrever um parágrafo destacando o significado de Jesus como a água da vida.<input type="checkbox" id="19"><br>
 
-3. Aprender e montar uma barraca em local apropriado.<br>
+3. Aprender e montar uma barraca em local apropriado.<input type="checkbox" id="20"><br>
 </p>
 <h2>VIII. ARTE DE ACAMPAR</h2>
 <p>
-1. Demonstrar como cuidar corretamente de uma corda. Fazer e explicar o uso prático dos seguintes nós:<br>
+1. Demonstrar como cuidar corretamente de uma corda. Fazer e explicar o uso prático dos seguintes nós:<input type="checkbox" id="21"><br>
 a) Simples<br>
 b) Cego<br>
 c) Direito<br>
@@ -130,15 +135,15 @@ l) Nó de gancho<br>
 m) Volta da ribeira<br>
 n) Ordinário<br>
 
-2. Completar a especialidade de Acampamento I.<br>
+2. Completar a especialidade de Acampamento I.<input type="checkbox" id="22"><br>
 
-3. Apresentar dez regras para uma caminhada e explicar o que fazer quando estiver perdido.<br>
+3. Apresentar dez regras para uma caminhada e explicar o que fazer quando estiver perdido.<input type="checkbox" id="23"><br>
 
-4. Aprender os sinais para seguir uma pista. Preparar e seguir uma pista de no mínimo 10 sinais, que também possa ser seguida por outros.<br>
+4. Aprender os sinais para seguir uma pista. Preparar e seguir uma pista de no mínimo 10 sinais, que também possa ser seguida por outros.<input type="checkbox" id="24"><br>
 </p>
 <h2>IX. ESTILO DE VIDA</h2>
 <p>
-1. Completar uma especialidade na área de Artes e habilidades manuais.<br>
+1. Completar uma especialidade na área de Artes e habilidades manuais.<input type="checkbox" id="25"><br>
 </p>
 </div>
 </body>
