--- a/Desbravadores-site/public/classes/excursionista.html
+++ b/Desbravadores-site/public/classes/excursionista.html
@@ -23,6 +23,11 @@
                 <a href="../conta.html">Conta</a>
             </div>
         </li>
+        <li>
+            <div class="box3">
+                <a href="../dashboard.html">Sair</a>
+            </div>
+       </li>
     </ul>
 <div class="conteiner">
     
@@ -30,115 +35,102 @@
         I. GERAIS
     </h2>
     <p>
-1. Ter, no mínimo, 10 anos de idade.<br>
 
-2. Ser membro ativo do Clube de Desbravadores.<br>
+1. Ter, no mínimo, 14 anos de idade. <input type="checkbox" id="1"><br>
 
-3. Memorizar e explicar o Voto e a Lei do Desbravador.<br>
+2. Ser membro ativo do Clube de Desbravadores.<input type="checkbox" id="2"><br>
 
-4. Ler o livro do Curso de Leitura do ano.<br>
+3. Memorizar e explicar o significado do Objetivo JA.<input type="checkbox" id="3"><br>
 
+4. Ler o livro do Curso de Leitura do ano e resumi-lo em uma página.<input type="checkbox" id="4"><br>
 
-5. Ler o livro Vaso de Barro.<br>
+5. Ler o livro O fim do começo.<input type="checkbox" id="5"><br>
 
-6. Participar ativamente da Classe Bíblica do seu Clube.<br>
 </p>
 
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
-1. Memorizar e demonstrar o seu conhecimento:<br>
-a) Criação: O que Deus criou em cada dia da Criação.<br>
-b) 10 Pragas: Quais as pragas que caíram sobre o Egito.<br>
-c) 12 Tribos: O nome de cada uma das 12 tribos de Israel.<br>
-d) 39 livros do Antigo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
+1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox" id="6"><br>
+a) Apóstolos: O nome dos 12 apóstolos de Cristo.
+b) Fruto do Espírito: A relação de adjetivos do caráter do cristão.
 
-2. Ler e explicar os versos abaixo:<br>
-a) João 3:16<br>
-b) Efésios 6:1-3<br>
-c) II Timóteo 3:16<br>
-d) Salmo 1<br>
+2. Ler e explicar os versos abaixo:<input type="checkbox" id="7"><br>
+a) Romanos 8:28
+b) Apocalipse 21:1-3
+c) II Pedro 1:20-21
+d) I João 2:14
+e) II Crônicas 20:20
+f) Salmo 46
 
-3. Leitura bíblica:<br>
-Gn 1, Gn 2, Gn 3, Gn 4:1-16, Gn 6:11-22, Gn 7, Gn 8, Gn 9:1-19, Gn 11:1-9, Gn 12:1-10, Gn 13, Gn 14:18-24, <br>
-Gn 15, Gn 17:1-8; 15-22, Gn 18:1-15, Gn 18:16-33, Gn 19:1-29, Gn 21:1-21, Gn 22:1-19, Gn 23, Gn 24:1-46, 48, <br>
-Gn 24:52-67, Gn 27, Gn 28, Gn 29, Gn 30:25-31; 31:2-3, 17-18, Gn 32, Gn 33, Gn 37, Gn 39, Gn 40, Gn 41, Gn 42, <br>
-Gn 43, Gn 44, Gn 45, Gn 47, Gn 50, Êx 1, Êx 2, Êx 3, Êx 4:1-17; 27-31, Êx 5, Êx 7, Êx 8, Êx 9, Êx 10, 11, Êx 12, <br>
-Êx 13:17-22; 14, Êx 15:22-27; 16, Êx 17, Êx 18, Êx 19, Êx 20, Êx 24, Êx 32, Êx 33, Êx 34:1-14; 29-35, Êx 35:4-29 e 40. <br>
+3. Estudar e entender a pessoa do Espírito Santo, como Ele se relaciona, e qual o Seu papel no crescimento espiritual de cada ser humano.<input type="checkbox" id="8"><br>
+
+4. Estudar, com sua Unidade, os eventos finais e a segunda vinda de Cristo.<input type="checkbox" id="9"><br>
+
+5. Através do estudo da Bíblia, descobrir o verdadeiro significado da observância do sábado.<input type="checkbox" id="10"><br>
+
+6. Leitura bíblica:<input type="checkbox" id="5"><br>
+Mt 24, 25, 26:1-35, 26:36-75, 27:1-31, 27:32-56, 27:57-66, 28, Mc 7, 9, 10, 11, 12, 16, Lc 1:4-25, 1:26-66, 2:21-38, 2:39-52, 7:18-28, 8, 10:1-37, 10:38-42, 11:1-13, 12, 13, 14, 15, 16:1-17, <br>
+17, 18, 19, 21, 22, 23, 24, Jo 1, 2, 3, 4, 5, 6:1-21, 6:22-71, 8:1-38, 9, 10, 11:1-46, 12, 13, 14, 15, 17, 18, 19, 20, 21, At 1, 2, 3, 4, 5, 6, 7, 8
+
 </p>
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
-1. Dedicar duas horas ajudando alguém em sua comunidade, através de duas das seguintes atividades:<br>
-a) Visitar alguém que precisa de amizade e orar com essa pessoa.<br>
-b) Oferecer alimento a alguém carente.<br>
-c) Participar de um projeto ecológico ou educativo.<br>
+1. Convidar um amigo para participar de uma atividade social de sua igreja ou da Associação/Missão.<input type="checkbox" id="11"><br>
 
-2. Escrever uma redação explicando como ser um bom cidadão no lar e na escola.<br>
+2. Participar de um projeto comunitário desde o planejamento, organização até a execução.<input type="checkbox" id="12"><br>
+
+3. Discutir como os jovens adventistas devem se relacionar com as pessoas nas diferentes situações do dia a dia, tais como:<input type="checkbox" id="13"><br>
+a) Vizinhos<br>
+b) Escola<br>
+c) Atividades sociais<br>
+d) Atividades recreativas<br>
+
 </p>
 <h2>IV. DESENVOLVENDO AMIZADE</h2>
 <p>
-1. Mencionar dez qualidades de um bom amigo e apresentar quatro situações diárias onde você praticou a Regra Áurea de Mateus 7:12.<br>
+1. Através de uma conversa em grupo ou avaliação pessoal, examinar suas atitudes em dois dos seguintes temas:<input type="checkbox" id="14"><br>
+a) Autoestima<br>
+b) Relacionamento familiar<br>
+c) Finanças pessoais<br>
+d) Pressão de grupo<br>
 
-2. Saber cantar o Hino Nacional de seu país e conhecer sua história. Saber o nome do autor da letra e da música do hino.<br>
+2. Preparar uma lista contendo cinco sugestões de atividades recreativas para ajudar pessoas com necessidades específicas e colaborar na organização de uma dessas atividades para essas pessoas.<input type="checkbox" id="15"><br>
+
 
 <h2>V. SAÚDE E APTIDÃO FÍSICA</h2>
 
-1. Completar uma das seguintes especialidades:<br>
-a) Natação principiante I<br>
-b) Cultura física<br>
-c) Nós e amarras<br>
-d) Segurança básica na água<br>
+1. Completar a especialidade de Temperança.<input type="checkbox" id="5"><br>
 
-2. Utilizando a experiência de Daniel:<br>
-a) Explicar os princípios de temperança que ele defendeu ou participar em uma apresentação ou encenação sobre Daniel 1.<br>
-b) Memorizar e explicar Daniel 1:8.<br>
-c) Escrever seu compromisso pessoal de seguir um estilo de vida saudável.<br>
-
-3. Aprender os princípios de uma dieta saudável e ajudar a preparar um quadro com os grupos básicos de alimentos.<br>
 </p>
 <h2>VI. ORGANIZAÇÃO E LIDERANÇA</h2>
 <p>
-1. Através da observação, acompanhar todo o processo de planejamento até a execução de uma caminhada de 5 km.<br>
+1. Preparar um organograma da igreja local e relacionar as funções dos departamentos.<input type="checkbox" id="16"><br>
+
+2. Participar de dois programas envolvendo diferentes departamentos da igreja local.<input type="checkbox" id="17"><br>
+
+3. Completar a especialidade de Aventuras com Cristo.<input type="checkbox" id="18"><br>
 </p>
 <h2>VII. ESTUDO DA NATUREZA</h2> 
 <p>
-1. Completar uma das seguintes especialidades:<br>
-a) Felinos<br>
-b) Cães<br>
-c) Mamíferos<br>
-d) Sementes<br>
-e) Aves de estimação<br>
+1. Recapitular a história de Nicodemos e relacioná-la com o ciclo de vida da lagarta ou borboleta, acrescentando um significado espiritual.<input type="checkbox" id="19"><br>
 
-2. Aprender e demonstrar uma maneira para purificar a água e escrever um parágrafo destacando o significado de Jesus como a água da vida.<br>
-
-3. Aprender e montar uma barraca em local apropriado.<br>
+2. Completar uma especialidade em Estudo da natureza, não realizada anteriormente.<input type="checkbox" id="20"><br>
 </p>
 <h2>VIII. ARTE DE ACAMPAR</h2>
 <p>
-1. Demonstrar como cuidar corretamente de uma corda. Fazer e explicar o uso prático dos seguintes nós:<br>
-a) Simples<br>
-b) Cego<br>
-c) Direito<br>
-d) Cirurgião<br>
-e) Laís de guia<br>
-f) Laís de guia duplo<br>
-g) Escota<br>
-h) Catau<br>
-i) Pescador<br>
-j) Fateixa<br>
-k) Volta do fiel<br>
-l) Nó de gancho<br>
-m) Volta da ribeira<br>
-n) Ordinário<br>
+1. Com um grupo de, no mínimo, quatro pessoas e com a presença de um conselheiro adulto e experiente, andar pelo menos 20 km numa área rural ou deserta, incluindo uma noite ao ar livre ou em barraca. <br>
+Planejar a expedição em detalhes antes da saída. Durante a caminhada, efetuar anotações sobre o terreno, flora e fauna observados. Depois, usando as anotações, participar de uma discussão em grupo, dirigida por seu conselheiro.<input type="checkbox" id="21"><br>
 
-2. Completar a especialidade de Acampamento I.<br>
-
-3. Apresentar dez regras para uma caminhada e explicar o que fazer quando estiver perdido.<br>
-
-4. Aprender os sinais para seguir uma pista. Preparar e seguir uma pista de no mínimo 10 sinais, que também possa ser seguida por outros.<br>
+2. Completar a especialidade de Pioneirias.<input type="checkbox" id="22"><br>
 </p>
 <h2>IX. ESTILO DE VIDA</h2>
 <p>
-1. Completar uma especialidade na área de Artes e habilidades manuais.<br>
+
+1. Completar uma especialidade não realizada anteriormente em uma das seguintes áreas:<input type="checkbox" id="23"><br>
+a) Atividades missionárias e comunitárias<br>
+b) Atividades agrícolas e afins<br>
+c) Ciência e saúde<br>
+d) Habilidades domésticas<br>
 </p>
 </div>
 </body>
