--- a/Desbravadores-site/public/classes/guia.html
+++ b/Desbravadores-site/public/classes/guia.html
@@ -23,6 +23,11 @@
                 <a href="../conta.html">Conta</a>
             </div>
         </li>
+        <li>
+            <div class="box3">
+                <a href="../dashboard.html">Sair</a>
+            </div>
+       </li>
     </ul>
 <div class="conteiner">
     
@@ -30,115 +35,121 @@
         I. GERAIS
     </h2>
     <p>
-1. Ter, no mínimo, 10 anos de idade.<br>
 
-2. Ser membro ativo do Clube de Desbravadores.<br>
+1. Ter, no mínimo, 15 anos de idade. <input type="checkbox" id="1"><br>
 
-3. Memorizar e explicar o Voto e a Lei do Desbravador.<br>
+2. Ser membro ativo do Clube de Desbravadores. <input type="checkbox" id="2"><br>
 
-4. Ler o livro do Curso de Leitura do ano.<br>
+3. Memorizar e explicar o Voto de Fidelidade à Bíblia.<input type="checkbox" id="3"><br>
 
+4. Ler o livro do Curso de Leitura do ano e resumi-lo em uma página.<input type="checkbox" id="4"><br>
 
-5. Ler o livro Vaso de Barro.<br>
+5. Ler o livro O livro amargo.<input type="checkbox" id="5"><br>
 
-6. Participar ativamente da Classe Bíblica do seu Clube.<br>
 </p>
 
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
-1. Memorizar e demonstrar o seu conhecimento:<br>
-a) Criação: O que Deus criou em cada dia da Criação.<br>
-b) 10 Pragas: Quais as pragas que caíram sobre o Egito.<br>
-c) 12 Tribos: O nome de cada uma das 12 tribos de Israel.<br>
-d) 39 livros do Antigo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
+1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox" id="6"><br>
+a) 3 Mensagens Angélicas: Reveladas em Apocalipse 14:6-12<br>
+b) 7 Igrejas: O nome das igrejas do Apocalipse<br>
+c) Pedras preciosas: Os 12 fundamentos da Cidade Santa – A Nova Jerusalém<br>
 
-2. Ler e explicar os versos abaixo:<br>
-a) João 3:16<br>
-b) Efésios 6:1-3<br>
-c) II Timóteo 3:16<br>
-d) Salmo 1<br>
+2. Ler e explicar os versos abaixo:<input type="checkbox" id="7"><br>
+a) I Coríntios 13<br>
+b) II Crônicas 7:14<br>
+c) Apocalipse 22:18-20<br>
+d) II Timóteo 4:6-7<br>
+e) Romanos 8:38-39<br>
+f) Mateus 6:33-34<br>
 
-3. Leitura bíblica:<br>
-Gn 1, Gn 2, Gn 3, Gn 4:1-16, Gn 6:11-22, Gn 7, Gn 8, Gn 9:1-19, Gn 11:1-9, Gn 12:1-10, Gn 13, Gn 14:18-24, <br>
-Gn 15, Gn 17:1-8; 15-22, Gn 18:1-15, Gn 18:16-33, Gn 19:1-29, Gn 21:1-21, Gn 22:1-19, Gn 23, Gn 24:1-46, 48, <br>
-Gn 24:52-67, Gn 27, Gn 28, Gn 29, Gn 30:25-31; 31:2-3, 17-18, Gn 32, Gn 33, Gn 37, Gn 39, Gn 40, Gn 41, Gn 42, <br>
-Gn 43, Gn 44, Gn 45, Gn 47, Gn 50, Êx 1, Êx 2, Êx 3, Êx 4:1-17; 27-31, Êx 5, Êx 7, Êx 8, Êx 9, Êx 10, 11, Êx 12, <br>
-Êx 13:17-22; 14, Êx 15:22-27; 16, Êx 17, Êx 18, Êx 19, Êx 20, Êx 24, Êx 32, Êx 33, Êx 34:1-14; 29-35, Êx 35:4-29 e 40. <br>
+3. Descrever os dons espirituais mencionados nos escritos de Paulo (Coríntios, Efésios, Filipenses) e para quais objetivos a igreja recebe esses dons.<input type="checkbox" id="8"><br>
+
+4. Estudar a estrutura e serviço do santuário no Antigo Testamento e relacionar com o ministério pessoal de Jesus e a cruz.<input type="checkbox" id="9"><br>
+
+5. Ler e resumir três histórias de pioneiros adventistas. Contar essas histórias na reunião do Clube, no culto JA ou na Escola Sabatina.<input type="checkbox" id="10"><br>
+
+6. Leitura bíblica:<input type="checkbox" id="11"><br>
+At 9:1-31, 9:32-43, 10, 11, 12, 13, 14, 16, 17:1-15, 17:16-34, 18, 19:1-22, 19:23-41, 20, 21:17-40, 22:1-16, 23, 24, 25, 26, 27, 28, Rm 12, 13, 14, 1 Co 13, <br>
+2 Co 5:11-21, Co 11:16-33, 12:1-10, Gl 5:16-26, 6:1-10, Ef 5:1-21, 6, Fp 4, Cl 3, 1 Ts 4:13-18, 5, 2 Ts 2, 3, 1 Tm 4:6-16, Tm 5:1-16, 6:11-21, 2 Tm 2, 3, Fm, <br>
+Hb 11, Tg 1, 3, 5:7-20, 1 Pe 1, 5:1-11, 2 Pe 3, 1 Jo 2, 3, 4, 5, Jd 17-25, Ap 1, 2, 3, 7:9-17, 12, 13, 14, 19, 20, 21.<br>
+
+
 </p>
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
-1. Dedicar duas horas ajudando alguém em sua comunidade, através de duas das seguintes atividades:<br>
-a) Visitar alguém que precisa de amizade e orar com essa pessoa.<br>
-b) Oferecer alimento a alguém carente.<br>
-c) Participar de um projeto ecológico ou educativo.<br>
+1. Ajudar a organizar e participar de uma das seguintes atividades:<input type="checkbox" id="12"><br>
+a) Fazer uma visita de cortesia a uma pessoa doente<br>
+b) Adotar uma pessoa ou família em necessidade e ajudá-los<br>
+c) Um projeto de sua escolha aprovado por seu líder<br>
 
-2. Escrever uma redação explicando como ser um bom cidadão no lar e na escola.<br>
+2. Discutir com sua Unidade os métodos de evangelismo pessoal e colocar alguns princípios em prática.<input type="checkbox" id="13"><br>
 </p>
 <h2>IV. DESENVOLVENDO AMIZADE</h2>
 <p>
-1. Mencionar dez qualidades de um bom amigo e apresentar quatro situações diárias onde você praticou a Regra Áurea de Mateus 7:12.<br>
-
-2. Saber cantar o Hino Nacional de seu país e conhecer sua história. Saber o nome do autor da letra e da música do hino.<br>
+1. Assistir a uma palestra ou aula e examinar suas atitudes em relação a dois dos seguintes temas:<input type="checkbox" id="14"><br>
+a) A importância da escolha profissional<br>
+b) Como se relacionar com os pais<br>
+c) A escolha da pessoa certa para namorar<br>
+d) O plano de Deus para o sexo<br>
 
 <h2>V. SAÚDE E APTIDÃO FÍSICA</h2>
 
-1. Completar uma das seguintes especialidades:<br>
-a) Natação principiante I<br>
-b) Cultura física<br>
-c) Nós e amarras<br>
-d) Segurança básica na água<br>
+1. Fazer uma apresentação, para o seu Clube ou Unidade, sobre os oito remédios naturais dados por Deus.<input type="checkbox" id="15"><br>
 
-2. Utilizando a experiência de Daniel:<br>
-a) Explicar os princípios de temperança que ele defendeu ou participar em uma apresentação ou encenação sobre Daniel 1.<br>
-b) Memorizar e explicar Daniel 1:8.<br>
-c) Escrever seu compromisso pessoal de seguir um estilo de vida saudável.<br>
+2. Completar uma das seguintes atividades:<input type="checkbox" id="16"><br>
+a) Escrever uma poesia ou artigo sobre saúde para ser divulgado em uma revista, boletim ou jornal da igreja<br>
+b) Individualmente ou em grupo, organizar e participar de uma corrida ou atividade similar e apresentar com antecedência um programa de treinamento físico para este evento<br>
+c) Ler as páginas 102-125 do livro Temperança, de Ellen White, e apresentar em uma página ou mais, 10 textos selecionados da leitura<br>
+d) Completar a especialidade de Nutrição ou liderar um grupo para a especialidade de Cultura física<br>
 
-3. Aprender os princípios de uma dieta saudável e ajudar a preparar um quadro com os grupos básicos de alimentos.<br>
 </p>
 <h2>VI. ORGANIZAÇÃO E LIDERANÇA</h2>
 <p>
-1. Através da observação, acompanhar todo o processo de planejamento até a execução de uma caminhada de 5 km.<br>
+1. Preparar um organograma da estrutura administrativa da Igreja Adventista em sua Divisão.<input type="checkbox" id="17"><br>
+
+2. Participar em um dos itens abaixo:<input type="checkbox" id="18"><br>
+a) Curso para conselheiros<br>
+b) Convenção de liderança da Associação/Missão<br>
+c) Duas reuniões de diretoria do seu Clube<br>
+
+3. Planejar e ensinar, no mínimo, dois requisitos de uma especialidade para um grupo ou Unidade de Desbravadores.<input type="checkbox" id="19"><br>
+
 </p>
 <h2>VII. ESTUDO DA NATUREZA</h2> 
 <p>
-1. Completar uma das seguintes especialidades:<br>
-a) Felinos<br>
-b) Cães<br>
-c) Mamíferos<br>
-d) Sementes<br>
-e) Aves de estimação<br>
+1. Ler o capítulo 7 do livro O Desejado de Todas as Nações sobre a infância de Jesus. Apresentar para um grupo, Clube ou Unidade as lições encontradas, demonstrando a importância que o estudo da natureza exerceu na educação e ministério de Jesus.<input type="checkbox" id="1"><br>
 
-2. Aprender e demonstrar uma maneira para purificar a água e escrever um parágrafo destacando o significado de Jesus como a água da vida.<br>
+2. Completar uma das seguintes especialidades:<input type="checkbox" id="20"><br>
+a) Ecologia<br>
+b) Conservação ambiental<br>
 
-3. Aprender e montar uma barraca em local apropriado.<br>
 </p>
 <h2>VIII. ARTE DE ACAMPAR</h2>
 <p>
-1. Demonstrar como cuidar corretamente de uma corda. Fazer e explicar o uso prático dos seguintes nós:<br>
-a) Simples<br>
-b) Cego<br>
-c) Direito<br>
-d) Cirurgião<br>
-e) Laís de guia<br>
-f) Laís de guia duplo<br>
-g) Escota<br>
-h) Catau<br>
-i) Pescador<br>
-j) Fateixa<br>
-k) Volta do fiel<br>
-l) Nó de gancho<br>
-m) Volta da ribeira<br>
-n) Ordinário<br>
+1. Participar com sua Unidade de um acampamento com estrutura de pioneiria, planejar o que deve ser levado e o que vai acontecer neste acampamento.<input type="checkbox" id="21"><br>
 
-2. Completar a especialidade de Acampamento I.<br>
+2. Planejar, preparar e cozinhar três refeições ao ar livre.<input type="checkbox" id="22"><br>
 
-3. Apresentar dez regras para uma caminhada e explicar o que fazer quando estiver perdido.<br>
+3. Construir e utilizar um móvel de acampamento em tamanho real, com nós e amarras.<input type="checkbox" id="23"><br>
 
-4. Aprender os sinais para seguir uma pista. Preparar e seguir uma pista de no mínimo 10 sinais, que também possa ser seguida por outros.<br>
+4. Completar uma especialidade, não realizada anteriormente, que possa ser contada para um dos mestrados abaixo:<input type="checkbox" id="24"><br>
+a) Aquática<br>
+b) Esportes<br>
+c) Atividades recreativas<br>
+d) Vida campestre<br>
+
 </p>
 <h2>IX. ESTILO DE VIDA</h2>
 <p>
-1. Completar uma especialidade na área de Artes e habilidades manuais.<br>
+
+1. Completar uma especialidade, não realizada anteriormente, em uma das seguintes áreas:<input type="checkbox" id="25"><br>
+a) Atividades recreativas<br>
+b) Ciência e saúde<br>
+c) Habilidades domésticas<br>
+d) Atividades profissionais<br>
+
+
 </p>
 </div>
 </body>
