--- a/Desbravadores-site/public/classes/pioneiro.html
+++ b/Desbravadores-site/public/classes/pioneiro.html
@@ -23,6 +23,11 @@
                 <a href="../conta.html">Conta</a>
             </div>
         </li>
+        <li>
+            <div class="box3">
+                <a href="../dashboard.html">Sair</a>
+            </div>
+       </li>
     </ul>
 <div class="conteiner">
     
@@ -30,115 +35,99 @@
         I. GERAIS
     </h2>
     <p>
-1. Ter, no mínimo, 10 anos de idade.<br>
+1. Ter, no mínimo, 13 anos de idade. <input type="checkbox" id="1"><br>
 
-2. Ser membro ativo do Clube de Desbravadores.<br>
+2. Ser membro ativo do Clube de Desbravadores.<input type="checkbox" id="2"><br>
 
-3. Memorizar e explicar o Voto e a Lei do Desbravador.<br>
+3. Memorizar e entender o Alvo e o Lema JA.<input type="checkbox" id="3"><br>
 
-4. Ler o livro do Curso de Leitura do ano.<br>
+4. Ler o livro do Curso de Leitura do ano e resumi-lo em uma página.<input type="checkbox" id="4"><br>
 
+5. Ler o livro Expedição Galápagos.<input type="checkbox" id="4"><br>
 
-5. Ler o livro Vaso de Barro.<br>
-
-6. Participar ativamente da Classe Bíblica do seu Clube.<br>
 </p>
 
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
-1. Memorizar e demonstrar o seu conhecimento:<br>
-a) Criação: O que Deus criou em cada dia da Criação.<br>
-b) 10 Pragas: Quais as pragas que caíram sobre o Egito.<br>
-c) 12 Tribos: O nome de cada uma das 12 tribos de Israel.<br>
-d) 39 livros do Antigo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
+1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox" id="5"><br>
+a) Bem-Aventuranças: o sermão da montanha.
 
-2. Ler e explicar os versos abaixo:<br>
-a) João 3:16<br>
-b) Efésios 6:1-3<br>
-c) II Timóteo 3:16<br>
-d) Salmo 1<br>
+2. Ler e explicar os versos abaixo:<input type="checkbox" id="6"><br>
+a) Isaías 26:3<br>
+b) Romanos 12:12<br>
+c) João 14:1-3<br>
+d) Salmo 37:5<br>
+e) Filipenses 3:12-14<br>
+f) Salmo 23<br>
+g) I Samuel 15:22<br>
 
-3. Leitura bíblica:<br>
-Gn 1, Gn 2, Gn 3, Gn 4:1-16, Gn 6:11-22, Gn 7, Gn 8, Gn 9:1-19, Gn 11:1-9, Gn 12:1-10, Gn 13, Gn 14:18-24, <br>
-Gn 15, Gn 17:1-8; 15-22, Gn 18:1-15, Gn 18:16-33, Gn 19:1-29, Gn 21:1-21, Gn 22:1-19, Gn 23, Gn 24:1-46, 48, <br>
-Gn 24:52-67, Gn 27, Gn 28, Gn 29, Gn 30:25-31; 31:2-3, 17-18, Gn 32, Gn 33, Gn 37, Gn 39, Gn 40, Gn 41, Gn 42, <br>
-Gn 43, Gn 44, Gn 45, Gn 47, Gn 50, Êx 1, Êx 2, Êx 3, Êx 4:1-17; 27-31, Êx 5, Êx 7, Êx 8, Êx 9, Êx 10, 11, Êx 12, <br>
-Êx 13:17-22; 14, Êx 15:22-27; 16, Êx 17, Êx 18, Êx 19, Êx 20, Êx 24, Êx 32, Êx 33, Êx 34:1-14; 29-35, Êx 35:4-29 e 40. <br>
+3. Conversar em seu Clube ou Unidade sobre:<input type="checkbox" id="7"><br>
+a) O que é o cristianismo<br>
+b) Quais são as características de um verdadeiro discípulo<br>
+c) O que fazer para ser um cristão verdadeiro<br>
+
+4. Participar de um estudo especial sobre a inspiração da Bíblia, com a ajuda de um pastor, trabalhando os conceitos de inspiração, revelação e iluminação.<input type="checkbox" id="8"><br>
+
+5. Convidar três ou mais pessoas para assistirem a uma Classe Bíblica ou Pequeno Grupo.<input type="checkbox" id="9"><br>
+
+6. Leitura bíblica:<input type="checkbox" id="10"><br>
+Ec 3, 5, 7, 11 e 12, Is 5, 11, 26:1-12, 35, 40, 43, 52:13-15, 53, 58, 60, 61, Jr 9:23-26, 10:1-16, 18:1-6, 26, 36, 52:1-11, Dn 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, <br>
+Jl 2:12-31, Am 7:10-16, 8:4-11, Jn 1, 2, 3 e 4, Mq 4, Ag 2, Zc 4, Ml 3 e 4, Mt 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23<br>
+<br>
 </p>
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
-1. Dedicar duas horas ajudando alguém em sua comunidade, através de duas das seguintes atividades:<br>
-a) Visitar alguém que precisa de amizade e orar com essa pessoa.<br>
-b) Oferecer alimento a alguém carente.<br>
-c) Participar de um projeto ecológico ou educativo.<br>
+1. Participar em dois projetos missionários definidos por seu Clube.<input type="checkbox" id="11"><br>
 
-2. Escrever uma redação explicando como ser um bom cidadão no lar e na escola.<br>
-</p>
+2. Trabalhar em um projeto comunitário de sua igreja, escola ou comunidade.<input type="checkbox" id="12"><br>
+
 <h2>IV. DESENVOLVENDO AMIZADE</h2>
 <p>
-1. Mencionar dez qualidades de um bom amigo e apresentar quatro situações diárias onde você praticou a Regra Áurea de Mateus 7:12.<br>
+1. Participar de um debate e fazer uma avaliação pessoal sobre suas atitudes em dois dos seguintes temas:<input type="checkbox" id="13"><br>
+a) Autoestima<br>
+b) Amizade<br>
+c) Relacionamentos<br>
+d) Otimismo e pessimismo<br>
 
-2. Saber cantar o Hino Nacional de seu país e conhecer sua história. Saber o nome do autor da letra e da música do hino.<br>
 
 <h2>V. SAÚDE E APTIDÃO FÍSICA</h2>
 
-1. Completar uma das seguintes especialidades:<br>
-a) Natação principiante I<br>
-b) Cultura física<br>
-c) Nós e amarras<br>
-d) Segurança básica na água<br>
+1. Preparar um programa pessoal de exercícios físicos diários e conversar com seu líder ou conselheiro sobre os princípios de aptidão física. Fazer e assinar um compromisso pessoal de realizar exercícios físicos regularmente.<input type="checkbox" id="13"><br>
 
-2. Utilizando a experiência de Daniel:<br>
-a) Explicar os princípios de temperança que ele defendeu ou participar em uma apresentação ou encenação sobre Daniel 1.<br>
-b) Memorizar e explicar Daniel 1:8.<br>
-c) Escrever seu compromisso pessoal de seguir um estilo de vida saudável.<br>
+2. Discutir as vantagens do estilo de vida adventista de acordo com o que a Bíblia ensina.<input type="checkbox" id="13"><br>
 
-3. Aprender os princípios de uma dieta saudável e ajudar a preparar um quadro com os grupos básicos de alimentos.<br>
 </p>
 <h2>VI. ORGANIZAÇÃO E LIDERANÇA</h2>
 <p>
-1. Através da observação, acompanhar todo o processo de planejamento até a execução de uma caminhada de 5 km.<br>
+1. Assistir a um seminário ou treinamento oferecido pela sua igreja ou distrito nos departamentos abaixo:<input type="checkbox" id="14"><br>
+a) Ministério Pessoal<br>
+b) Evangelismo<br>
+
+2. Participar de uma atividade social de sua igreja.<input type="checkbox" id="15"><br>
+
 </p>
 <h2>VII. ESTUDO DA NATUREZA</h2> 
 <p>
-1. Completar uma das seguintes especialidades:<br>
-a) Felinos<br>
-b) Cães<br>
-c) Mamíferos<br>
-d) Sementes<br>
-e) Aves de estimação<br>
+1. Estudar a história do dilúvio e o processo de fossilização.<input type="checkbox" id="16"><br>
 
-2. Aprender e demonstrar uma maneira para purificar a água e escrever um parágrafo destacando o significado de Jesus como a água da vida.<br>
-
-3. Aprender e montar uma barraca em local apropriado.<br>
+2. Completar uma especialidade não realizada anteriormente em Estudo da natureza.<input type="checkbox" id="17"><br>
 </p>
 <h2>VIII. ARTE DE ACAMPAR</h2>
 <p>
-1. Demonstrar como cuidar corretamente de uma corda. Fazer e explicar o uso prático dos seguintes nós:<br>
-a) Simples<br>
-b) Cego<br>
-c) Direito<br>
-d) Cirurgião<br>
-e) Laís de guia<br>
-f) Laís de guia duplo<br>
-g) Escota<br>
-h) Catau<br>
-i) Pescador<br>
-j) Fateixa<br>
-k) Volta do fiel<br>
-l) Nó de gancho<br>
-m) Volta da ribeira<br>
-n) Ordinário<br>
+1. Fazer um fogo refletor e demonstrar seu uso.<input type="checkbox" id="18"><br>
 
-2. Completar a especialidade de Acampamento I.<br>
+2. Participar de um acampamento de final de semana, arrumando de forma apropriada sua bolsa ou mochila com o equipamento pessoal necessário.<input type="checkbox" id="19"><br>
 
-3. Apresentar dez regras para uma caminhada e explicar o que fazer quando estiver perdido.<br>
+3. Completar a especialidade de Resgate básico.<input type="checkbox" id="20"><br>
 
-4. Aprender os sinais para seguir uma pista. Preparar e seguir uma pista de no mínimo 10 sinais, que também possa ser seguida por outros.<br>
 </p>
 <h2>IX. ESTILO DE VIDA</h2>
 <p>
-1. Completar uma especialidade na área de Artes e habilidades manuais.<br>
+1. Completar uma especialidade não realizada anteriormente em uma das seguintes áreas:<input type="checkbox" id="21"><br>
+a) Atividades missionárias e comunitárias<br>
+b) Atividades profissionais<br>
+c) Atividades agrícolas e afins<br>
+
 </p>
 </div>
 </body>
